results_2/90_10/A1_pod100/traffic_matrix_10/A1_10-90_10.stderr
An unexpected error has occurred.
Please consider posting the following information to the
conda GitHub issue tracker at:

    https://github.com/conda/conda/issues



Current conda install:

               platform : linux-64
          conda version : 4.2.13
       conda is private : False
      conda-env version : 4.2.13
    conda-build version : not installed
         python version : 3.5.2.final.0
       requests version : 2.11.1
       root environment : /c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3  (writable)
    default environment : /c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/envs/py27
       envs directories : /c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/envs
          package cache : /c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/pkgs
           channel URLs : http://conda.anaconda.org/gurobi/linux-64
                          http://conda.anaconda.org/gurobi/noarch
                          https://repo.continuum.io/pkgs/free/linux-64
                          https://repo.continuum.io/pkgs/free/noarch
                          https://repo.continuum.io/pkgs/pro/linux-64
                          https://repo.continuum.io/pkgs/pro/noarch
            config file : /c3se/users/lyaa/Hebbe/.condarc
           offline mode : False



`$ /c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/bin/conda ..checkenv bash py27`




    Traceback (most recent call last):
      File "/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/lib/python3.5/site-packages/conda/exceptions.py", line 479, in conda_exception_handler
        return_value = func(*args, **kwargs)
      File "/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/lib/python3.5/site-packages/conda/cli/main.py", line 94, in _main
        activate.main()
      File "/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/lib/python3.5/site-packages/conda/cli/activate.py", line 148, in main
        conda.install.symlink_conda(prefix, context.root_dir, shell)
      File "/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/lib/python3.5/site-packages/conda/install.py", line 541, in symlink_conda
        symlink_conda_hlp(prefix, root_dir, where, symlink_fn)
      File "/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/lib/python3.5/site-packages/conda/install.py", line 558, in symlink_conda_hlp
        symlink_fn(root_file, prefix_file)
    FileExistsError: [Errno 17] File exists: '/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/bin/conda' -> '/c3se/NOBACKUP/users/lyaa/Hebbe/miniconda3/envs/py27/bin/conda'

Traceback (most recent call last):
  File "A1_10.py", line 12, in <module>
    from sdm import *
  File "/local/tmp.730170/sdm.py", line 364
    print 'wrong'
                ^
SyntaxError: Missing parentheses in call to 'print'
